fix get_category_endpoint and get_all_categories_endpoint
