# openapi_schema.json
@@ -1,60 +1,1 @@
-{
-  "openapi": "3.1.0",
-  "info": {
-    "title": "FastAPI",
-    "version": "0.1.0"
-  },
-  "paths": {
-    "/": {
-      "get": {
-        "summary": "Get Root",
-        "description": "basic health check for the main route of the API.\n:return:JSON object with a single \"state\" key containing the string value \"200 ok\"",
-        "operationId": "get_root__get",
-        "responses": {
-          "200": {
-            "description": "Successful Response",
-            "content": {
-              "application/json": {
-                "schema": {}
-              }
-            }
-          }
-        }
-      }
-    },
-    "/categories": {
-      "get": {
-        "summary": "Get Categories Endpoint",
-        "description": "This fetches all category data from the database.\nThis allows the frontend to easily display the list of all available main categories to the user.\n:return: the categories as a list of Category model objects serialized to JSON.",
-        "operationId": "get_categories_endpoint_categories_get",
-        "responses": {
-          "200": {
-            "description": "Successful Response",
-            "content": {
-              "application/json": {
-                "schema": {}
-              }
-            }
-          }
-        }
-      }
-    },
-    "/menu": {
-      "get": {
-        "summary": "Get Menu Endpoint",
-        "description": "This endpoint fetches all menu item data from the database.\nThis allows the frontend to display the list of all available menu items to build out the menu display for users.\n:return: It directly returns the list of menu items as a JSON array.",
-        "operationId": "get_menu_endpoint_menu_get",
-        "responses": {
-          "200": {
-            "description": "Successful Response",
-            "content": {
-              "application/json": {
-                "schema": {}
-              }
-            }
-          }
-        }
-      }
-    }
-  }
-}
+{"openapi": "3.1.0", "info": {"title": "FastAPI", "version": "0.1.0"}, "paths": {"/": {"get": {"summary": "Get Root", "description": "basic health check for the main route of the API.\n:return:JSON object with a single \"state\" key containing the string value \"200 ok\"", "operationId": "get_root__get", "responses": {"200": {"description": "Successful Response", "content": {"application/json": {"schema": {}}}}}}}, "/categories": {"get": {"summary": "Get All Categories Endpoint", "description": "This fetches all category data from the database  .\n:return: The categories as a list of Category model objects serialized to JSON.", "operationId": "get_all_categories_endpoint_categories_get", "responses": {"200": {"description": "Successful Response", "content": {"application/json": {"schema": {}}}}}}}, "/category/{id_}": {"get": {"summary": "Get Category Endpoint", "description": "This fetch category data from the database by id .\n:param: id_: The id of the category ,\n:return: category information as a Category model objects serialized to JSON.", "operationId": "get_category_endpoint_category__id___get", "parameters": [{"name": "id_", "in": "path", "required": true, "schema": {"type": "integer", "title": "Id "}}], "responses": {"200": {"description": "Successful Response", "content": {"application/json": {"schema": {}}}}, "422": {"description": "Validation Error", "content": {"application/json": {"schema": {"$ref": "#/components/schemas/HTTPValidationError"}}}}}}}}, "components": {"schemas": {"HTTPValidationError": {"properties": {"detail": {"items": {"$ref": "#/components/schemas/ValidationError"}, "type": "array", "title": "Detail"}}, "type": "object", "title": "HTTPValidationError"}, "ValidationError": {"properties": {"loc": {"items": {"anyOf": [{"type": "string"}, {"type": "integer"}]}, "type": "array", "title": "Location"}, "msg": {"type": "string", "title": "Message"}, "type": {"type": "string", "title": "Error Type"}}, "type": "object", "required": ["loc", "msg", "type"], "title": "ValidationError"}}}}
